# encashment-service

./: .env.deploy  .gitignore  README.md  build-docs.sh  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
algo/: Dockerfile  pyproject.toml
atm/: Dockerfile  main.py  pyproject.toml
atm/atm/main/: main.py
atm/atm/presentation/api/: __init__.py  handlers.py
atm/src/: database.py  router.py
atm/src/atm/: Service.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
atm/src/files/: ATMS.csv
atm/src/scripts/: updateAtm.py
atm/tests/unit/: test_get_radius.py
bff/: .env.example  Dockerfile  pyproject.toml
bff/bff/adapters/: api_client.py
bff/bff/application/common/: commands.py  interfaces.py
bff/bff/application/services/: compute_route.py
bff/bff/main/: di.py  main.py
bff/bff/main/config/: __init__.py
bff/bff/presentation/api/: __init__.py  handlers.py
bff/bff/presentation/schemas/: requests.py
docs/docstrings/: .pages  DOCS-BFF.md  bff.adapters.md  bff.application.common.commands.md  bff.application.common.interfaces.md  bff.application.common.md  bff.application.md  bff.application.services.compute_route.md  bff.application.services.md  bff.main.md  bff.md  bff.presentation.md  bff.presentation.schemas.md  bff.presentation.schemas.requests.md  tests.md
encashment/: Dockerfile
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
scripts/: README.md
scripts/ATM_full_graph/: TSP_solutions.py  algo.py  api.py  (+5 more)
(+44 files in other folders)
