[tool.poetry]
name = "bff"
version = "0.1.0"
description = ""
authors = ["Sergoot <sergey.lyutavin22@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
aiohttp = "^3.10.10"
pydantic-settings = "^2.5.2"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
lazydocs = "^0.4.8"
mkdocs = "^1.6.1"
mkdocs-awesome-pages-plugin = "^2.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
